# zephyr_tutorial

blink_nrf52840/: .vscode-ctags  CMakeCache.txt  CMakeLists.txt  JLink_Linux_V788a_x86_64.deb  README.md
button/: CMakeLists.txt  README.md
condition_variable/: CMakeLists.txt
condition_variable/src/: main.c
semophare/: CMakeLists.txt  prj.conf
semophare/src/: main.c
threads/: CMakeLists.txt
zephyr_app_1/: CMakeLists.txt  Kconfig  prj.conf
zephyr_app_1/board/: app.overlay
zephyr_app_1/drivers/button/: CMakeLists.txt  Kconfig
zephyr_app_1/drivers/button/dts/bindings/: button_driver.yaml
zephyr_app_1/drivers/button/include/: button_driver.h
zephyr_app_1/drivers/button/src/: button_driver.c
zephyr_app_1/dts/bindings/: button-driver.yaml
zephyr_app_1/src/: main.c
